# skills

./: .gitignore  AGENTS.md  filters.lua  gen_index.py  generate.py  makefile  mv_skill  mv_skill.py  mvskill  news.py  opencode.json  pyproject.toml  readme.md  scrape.py  setup-forge  setup-opencode  setup-opencode.sh  setup-pi  setup-standard  system.md  tophymns.py  updateimages  updatesongs.py
.github/workflows/: deploy.yml
agents/: raw.md
answer-question/: SKILL.md
answering-questions/: SKILL.md
coding-javascript/: SKILL.md
coding-python/: SKILL.md
creating-lecture/: SKILL.md
creating-slides/: SKILL.md
generating-multiple-choice-questions/: SKILL.md
generating-qti/: SKILL.md
javascript-code/: SKILL.md
lecture/: SKILL.md
multiple-choice/: SKILL.md
pi/: settings.json
planning-worship/: SKILL.md
python-code/: SKILL.md
reflecting/: SKILL.md
skills/academic-content/: SKILL.md
skills/academic-content/references/: quotes.txt
skills/animate/: SKILL.md
skills/coding-javascript/: SKILL.md
skills/coding-lab/: SKILL.md
skills/coding-lab/references/examples/: cpp.md  ctx.py  python.md  writectx.py
skills/coding-lab/references/examples/c++/: primes.cpp
skills/coding-lab/references/examples/cpp/: makefile  primes.cpp  readme.md
skills/coding-lab/references/examples/python/: makefile  readme.md  resistors.py
skills/coding-python/: SKILL.md
skills/creating-lecture/: SKILL.md
skills/creating-lecture/references/: quotes.txt
skills/creating-lecture/scripts/: related_content.py
skills/creating-programming-lab/: SKILL.md
skills/diagram/: SKILL.md
skills/educational-content/: SKILL.md
skills/educational-content/references/: images.tsv  quotes.txt
skills/educational-content/scripts/: related_content.py
skills/generating-qti/: SKILL.md
skills/hymnary-recommendations/: SKILL.md
skills/hymnary-recommendations/references/: api.md  songs.jsonl  songs.md
skills/instructor-feedback-summarizer/: SKILL.md
skills/migrate-uv/: SKILL.md
skills/migrate-uv/templates/: makefile  pyproject.toml  release.yml
skills/objective-questions/: SKILL.md
skills/planning-worship/: SKILL.md
skills/preaching/: SKILL.md
skills/pyo3-project/: SKILL.md
skills/pyo3-project/references/: Cargo.toml  makefile  pyproject.toml
skills/pyo3-project/references/src/: lib.rs
skills/qti/: SKILL.md
skills/reflecting/: SKILL.md
skills/software-project/: SKILL.md
skills/software-project/references/: .gitignore  .jshintrc  makefile  pyproject.toml  readme.md  test_index.py
skills/software-project/references/.github/workflows/: release.yml
skills/worship-plan/: SKILL.md
slide-deck/: SKILL.md
writing-english/: SKILL.md
