[project]
name = "skills"
version = "0.1.0"
description = ""
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.10.1",
    "tokenizers>=0.15.0",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
exclude = ["lecture*", "reflect*", "answer-question*", "multiple-choice*", "python-code*", "slide-deck*"]
