[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{PACKAGE_NAME}}"
version = "{{VERSION}}"
description = "{{DESCRIPTION}}"
readme = "readme.md"
authors = [
    { name = "{{AUTHOR_NAME}}", email = "{{AUTHOR_EMAIL}}" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    {{DEPENDENCIES}}
]

[project.scripts]
{{PACKAGE_NAME}} = "{{PACKAGE_NAME}}.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["{{PACKAGE_NAME}}"]
