[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "json2qti"
version = "1.3.0"
description = "Convert simple JSON quizzes to QTI format for LMS import"
readme = "readme.md"
authors = [
    { name = "Jon Craton", email = "jncraton@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
json2qti = "json2qti:main"

[tool.hatch.build.targets.wheel]
packages = ["json2qti.py"]
